[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/art/decorative/decorative.tres" type="TileSet" id=1]
[ext_resource path="res://assets/art/textures/Floor.tres" type="TileSet" id=2]
[ext_resource path="res://assets/art/textures/Walls.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/Doors.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/interactive/interactive/rollyBed.png" type="Texture" id=5]
[ext_resource path="res://scenes/characters/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/CreateRollyBed.gd" type="Script" id=7]
[ext_resource path="res://scenes/interact/MountBedCutscene.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/art/decorative/decorative/closedBox.png" type="Texture" id=9]
[ext_resource path="res://scenes/ClosedBox.gd" type="Script" id=10]
[ext_resource path="res://scenes/characters/Player+Bed.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/MotorRoom.gd" type="Script" id=12]
[ext_resource path="res://scenes/MotorRoomDoors.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61, 69 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 40 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 984, 368 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "box_destroyed"
length = 1.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 984, 368 ), Vector2( 944, 280 ), Vector2( 904, 224 ), Vector2( 880, 168 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -3.34461, -2.63873, -2.63873 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.55, 0.7, 0.85, 1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 44 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 21 )

[node name="MotorRoom" type="Node2D"]
script = ExtResource( 12 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 40, 40 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 40, 40 )
show_collision = true
format = 1
tile_data = PoolIntArray( 0, 10, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 18, 10, 0, 19, 10, 0, 20, 10, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 24, 10, 0, 25, 10, 0, 65536, 10, 0, 65537, 10, 0, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 0, 65542, 10, 0, 65543, 10, 0, 65544, 10, 0, 65545, 10, 0, 65546, 10, 0, 65547, 10, 0, 65548, 10, 0, 65549, 10, 0, 65550, 10, 0, 65551, 10, 0, 65552, 10, 0, 65553, 10, 0, 65554, 10, 0, 65555, 10, 0, 65556, 10, 0, 65557, 10, 0, 65558, 10, 0, 65559, 10, 0, 65560, 10, 0, 65561, 10, 0, 131072, 10, 0, 131073, 10, 0, 131096, 10, 0, 131097, 10, 0, 196608, 10, 0, 196609, 10, 0, 196632, 10, 0, 196633, 10, 0, 262144, 10, 0, 262145, 10, 0, 262168, 10, 0, 262169, 10, 0, 327680, 10, 0, 327681, 10, 0, 327704, 10, 0, 327705, 10, 0, 393216, 10, 0, 393217, 10, 0, 393240, 10, 0, 393241, 10, 0, 458752, 10, 0, 458753, 10, 0, 458776, 10, 0, 458777, 10, 0, 524288, 10, 0, 524289, 10, 0, 524312, 10, 0, 524313, 10, 0, 589824, 10, 0, 589825, 10, 0, 589848, 10, 0, 589849, 10, 0, 655360, 10, 0, 655361, 10, 0, 655384, 10, 0, 655385, 10, 0, 720896, 10, 0, 720897, 10, 0, 720920, 10, 0, 720921, 10, 0, 786432, 10, 0, 786433, 10, 0, 786456, 10, 0, 786457, 10, 0, 851968, 10, 0, 851969, 10, 0, 851970, 10, 0, 851971, 10, 0, 851972, 10, 0, 851973, 10, 0, 851974, 10, 0, 851975, 10, 0, 851976, 10, 0, 851977, 10, 0, 851978, 10, 0, 851979, 10, 0, 851980, 10, 0, 851981, 10, 0, 851982, 10, 0, 851983, 10, 0, 851984, 10, 0, 851985, 10, 0, 851986, 10, 0, 851987, 10, 0, 851988, 10, 0, 851989, 10, 0, 851990, 10, 0, 851991, 10, 0, 851992, 10, 0, 851993, 10, 0, 917504, 10, 0, 917505, 10, 0, 917506, 10, 0, 917507, 10, 0, 917508, 10, 0, 917509, 10, 0, 917510, 10, 0, 917511, 10, 0, 917512, 10, 0, 917513, 10, 0, 917514, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917522, 10, 0, 917523, 10, 0, 917524, 10, 0, 917525, 10, 0, 917526, 10, 0, 917527, 10, 0, 917528, 10, 0, 917529, 10, 0, 983040, 10, 0, 983041, 10, 0, 983042, 10, 0, 983043, 10, 0, 983044, 10, 0, 983045, 10, 0, 983046, 10, 0, 983047, 10, 0, 983048, 10, 0, 983049, 10, 0, 983050, 10, 0, 983051, 10, 0, 983052, 10, 0, 983053, 10, 0, 983054, 10, 0, 983055, 10, 0, 983056, 10, 0, 983057, 10, 0, 983058, 10, 0, 983059, 10, 0, 983060, 10, 0, 983061, 10, 0, 983062, 10, 0, 983063, 10, 0, 983064, 10, 0, 983065, 10, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Decorative" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 40, 64 )
show_collision = true
format = 1
tile_data = PoolIntArray( 4, 68, 0, 9, 68, 0, 14, 68, 0, 19, 68, 0, 65536, 37, 0, 65537, 37, 0, 131073, 52, 0, 196608, 37, 0, 196609, 37, 0, 196612, 68, 0, 196617, 68, 0, 196622, 68, 0, 196627, 68, 0, 262146, 70, 0, 262150, 70, 0, 262154, 70, 0, 262158, 70, 0, 262162, 70, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="MotorRoomDoor" parent="." instance=ExtResource( 4 )]
position = Vector2( 552, 584 )
script = ExtResource( 13 )
next_scene = "Hallway.tscn"

[node name="Position2D" type="Position2D" parent="MotorRoomDoor"]
position = Vector2( 0, -36 )
scale = Vector2( 0.25, 0.25 )

[node name="RollyBed" type="Node2D" parent="."]
position = Vector2( -104, 120 )
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="RollyBed"]

[node name="MountBedCutscene" parent="RollyBed/CanvasLayer" instance=ExtResource( 8 )]
margin_left = -104.0
margin_top = 120.0
margin_right = -104.0
margin_bottom = 120.0

[node name="Area2D" type="Area2D" parent="RollyBed"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RollyBed/Area2D"]
position = Vector2( 496, 328 )
shape = SubResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="RollyBed" groups=["push"]]
position = Vector2( 495, 325 )
collision_layer = 8
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RollyBed/RigidBody2D"]
position = Vector2( -2.5, 0 )
shape = SubResource( 1 )

[node name="RollyBed" type="Sprite" parent="RollyBed/RigidBody2D"]
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 552, 432 )

[node name="ClosedBox" type="Sprite" parent="."]
position = Vector2( 984, 368 )
texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ClosedBox"]
anims/RESET = SubResource( 5 )
anims/box_destroyed = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="ClosedBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClosedBox/Area2D"]
position = Vector2( -48, -4 )
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="ClosedBox/Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClosedBox/Area2D/StaticBody2D"]
position = Vector2( -48, -5 )
shape = SubResource( 3 )

[node name="PlayerBed" parent="." instance=ExtResource( 11 )]
position = Vector2( 552, 440 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
current = true

[connection signal="area_entered" from="RollyBed/Area2D" to="RollyBed" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="RollyBed/Area2D" to="RollyBed" method="_on_Area2D_area_exited"]
[connection signal="animation_finished" from="ClosedBox/AnimationPlayer" to="ClosedBox" method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="ClosedBox/Area2D" to="ClosedBox" method="_on_Area2D_area_entered"]
